--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,14 @@ google.recaptcha.key.secret=6LefKOAUAAAAAGs0hOsCoOBu14TKDGu100LkpnVo
 google.recaptcha.key.threshold=0.5
 
 ################### JavaMail Configuration ##########################
-support.email=USERNAME@gmail.com
+support.email=webstore.perfume@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.protocol=smtps
-spring.mail.username=USERNAME@gmail.com
-spring.mail.password=PASSWORD
+# spring.mail.username=USERNAME@gmail.com
+# spring.mail.password=PASSWORD
+spring.mail.username=webstore.perfume@gmail.com
+spring.mail.password=lnlzzizbarytqfnz
 spring.mail.properties.mail.transport.protocol=smtps
 spring.mail.properties.mail.smtps.auth=true
 spring.mail.properties.mail.smtps.starttls.enable=true
